--- a/pom.xml
+++ b/pom.xml
@@ -21,12 +21,19 @@
 
         <spock.version>1.3-groovy-2.5</spock.version>
         <http-builder.version>1.0.4</http-builder.version>
+        <problem-spring-boot.version>0.25.2</problem-spring-boot.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.zalando</groupId>
+            <artifactId>problem-spring-web-starter</artifactId>
+            <version>${problem-spring-boot.version}</version>
         </dependency>
 
         <dependency>
