--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,12 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>UP42 Feature Service</name>
 
+    <scm>
+        <connection>scm:git:https://github.com/up42-candidate/feature-service.git</connection>
+        <url>https://github.com/up42-candidate/feature-service</url>
+        <developerConnection>scm:git:https://github.com/up42-candidate/feature-service.git</developerConnection>
+    </scm>
+
     <properties>
         <java.version>1.8</java.version>
         <gmavenplus-plugin.version>1.6.3</gmavenplus-plugin.version>
@@ -84,5 +90,6 @@
             </plugin>
         </plugins>
     </build>
+
 
 </project>
